# TODO-App

./: .gitignore  pyproject.toml
todo_app/: manage.py
todo_app/api/: models.py  serializers.py  urls.py  views.py
todo_app/api/migrations/: 0001_initial.py
todo_app/app/: views.py
todo_app/frontend/: babel.config.json  package-lock.json  package.json  urls.py  views.py  vite.config.js
todo_app/frontend/src/components/: App.js  App.jsx  Header.js  Header.jsx  Homepage.js  Homepage.jsx  TodoItem.js  TodoList.js  TodoList.jsx
todo_app/frontend/src/css/: globalStyles.jsx  index.css
todo_app/frontend/static/: .gitignore
todo_app/frontend/static/css/: index.css
todo_app/frontend/templates/: index.html
todo_app/frontend/templates/frontend/: index.html
todo_app/todo_app/: settings.py
todo_app/todo_app_project/: asgi.py  settings.py  urls.py  wsgi.py
