[tool.poetry]
name = "todo app"
version = "0.1.0"
description = "A basic todo app using django and react"
authors = ["James <j.alsop99@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
